[tool.poetry]
name = "telegram-llm"
version = "0.1.0"
description = ""
authors = ["Michael McAndrew <mcandrmi@tcd.ie>"]
readme = "README.md"
packages = [
    { include = "app.py" },
]

[tool.poetry.dependencies]
python = "^3.12"
logfire = {extras = ["httpx"], version = "^3.6.4"}
python-telegram-bot = "^21.11.1"
python-dotenv = "^1.0.1"
llm = "^0.23"
sqlite-utils = "^3.38"
llm-anthropic = "^0.15.1"
llm-gemini = "^0.13"
markdown = "^3.7"
firecrawl-py = "^1.14.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
service-run = "app:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "asyncio: mark a test as an asyncio test",
]
